feat: integrate AI map control into Windows distribution